base/monitoring/heartbeat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-heartbeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-heartbeat
  template:
    metadata:
      labels:
        app: monitoring-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
